Adding directories to ignore which are built

--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,6 @@ UpgradeLog*.htm
 
 # Microsoft Fakes
 FakesAssemblies/
+cpython/Tools/pyuap/pyuapapp/Generated Files/
+cpython/Tools/pyuap/pyuapapp/lib.zip
+cpython/Tools/pyuap/winrt/
